--- a/JobApplication/src/main/resources/application.properties
+++ b/JobApplication/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=JobApplication
-spring.h2.console.enabled = true
-spring.datasource.url=jdbc:h2:mem:test
-spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:mysql://localhost:3306/JobApplication
+spring.datasource.username=root
+spring.datasource.password=ArjunSingh1204
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
