--- a/JobApplication/src/main/resources/application.properties
+++ b/JobApplication/src/main/resources/application.properties
@@ -1,10 +1,24 @@
 spring.application.name=JobApplication
+#DataBase
 spring.datasource.url=jdbc:mysql://localhost:3306/JobApplication
 spring.datasource.username=root
 spring.datasource.password=ArjunSingh1204
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+#Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#Actuator
+management.endpoints.web.exposure.include=health,info,bean
+management.endpoint.health.show-details=always
+
+info.app.name = JobApplication
+info.app.description=Job Application built by Arjun 
+info.app.version = 1.0.0
+
+management.info.env.enabled=true
+management.endpoint.shutdown.enabled=true 
+
+
