--- a/JobApplication/src/main/resources/application.properties
+++ b/JobApplication/src/main/resources/application.properties
@@ -11,14 +11,15 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #Actuator
-management.endpoints.web.exposure.include=health,info,bean
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 info.app.name = JobApplication
-info.app.description=Job Application built by Arjun 
+info.app.description=Job Application built by Arjun
 info.app.version = 1.0.0
 
 management.info.env.enabled=true
 management.endpoint.shutdown.enabled=true
+
 
 
