--- a/JobApplication/pom.xml
+++ b/JobApplication/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -73,6 +73,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.4.5</version>
+				<configuration>
+					<image>
+						<name>jobapplicationimage:lastest</name>
+					</image>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
