--- a/JobApplication/src/main/resources/application.properties
+++ b/JobApplication/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #Actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
 info.app.name = JobApplication
